   * added a new "snowy castle" terrain
   * added new mausoleum scenery
   * added new "snowy fort"
   * added new "desert castle"
   * added new "tropical water"
   * improved dry grass "savanna" terrain
   * improved green grass "grassland" terrain
   * fix for dwarven castle to cave wall alignment issue by Alarantalara
   * improved "desert road" based off the dirt terrain
 * User interface:
   * Removed the unused gui2 menu bar
   * Added a window register framework
   * Enabled the --new-widgets MP create dialog again
   * Enabled the hidden join observe buttons per row
   * Enabled alignment in labels
   * Avoid resizing when next or previous button is pressed in the
     --new-widgets title screen
   * Added gui2 progress bar widget
   * Added "animated" logo to the --new-widgets title screen
   * Fixed the language is refreshed after the language is changed in the
     --new-widgets title screen
   * Implemented bug #15623 (patch #1568): On change resolution screen,
     widescreen resolutions are now marked as such
   * Added tooltips to the --new-widgets title screen
   * Added a place holder upload statistics button in the --new-widgets title
   * Fixed bug #15716: Lobby crash when refreshing with filtered out games
   * Fixed bug #15768: Avoid parts of the previous game show in the lobby
   * Fixed bug #15727: Allow wml message titles to wrap
     screen
   * Added the total number of villages to the status table lists
   * Added a new attack dialog, available for testing with --new-widgets
   * Patch #1645: Fixed a bug sending keyboard events to deactivated controls
   * Deprecated the resize flag for gui2 image, use the resize_mode instead
   * Patch #1639: Added handlers for keyboard (arrow keys) to move gui2 sliders
   * Added new experimental list box implementation, available for testing
     with -DGUI2_EXPERIMENTAL_LISTBOX
 * WML Engine:
   * Deprecated [set_variable]'s random key, use rand instead