@@ -861,6 +861,9 @@
         ircuser = "pokhbocee"
     [/entry]
     [entry]
+        name = "FAAB"
+    [/entry]
+    [entry]
         name = "Fedor Khod'kov (teddy/fkhodkov)"
     [/entry]
     [entry]
