@@ -24,6 +24,7 @@ Version 1.9.0-svn:
      "Elensefar Courtyard" by krotop.
 
  * User interface:
+   * Added dialog for installation of add-on dependencies
    * Show join and observe buttons per row in the lobby.
    * Fixed bug #15716: Lobby crash when refreshing with filtered out games.
    * Fixed bug #14730: Tab completion not working in the new lobby.
