@@ -36,6 +36,7 @@ Version 1.9.0-svn:
    * fix for dwarven castle to cave wall alignment issue by Alarantalara
    * improved "desert road" based off the dirt terrain
  * User interface:
+   * Added dialog for installation of add-on dependencies
    * Removed the unused gui2 menu bar
    * Added a window register framework
    * Enabled the --new-widgets MP create dialog again
